kubernetes/blue/green/ingress/blue-green-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-green-ingress
  namespace: routing
spec:
  ingressClassName: nginx
  rules:
    - host: bluegreen.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traffic-router
                port:
                  number: 5000
